--- a/parker's_lawncare.html
+++ b/parker's_lawncare.html
@@ -6,7 +6,7 @@
 		<meta name="author" content="Dylan Pogue">
 		<meta name="description" content="CSCI 1210 ">
 		<meta name="keywords" content="CSCI 1210">
-        <link rel="stylesheet" href="css/semesterproject.css">
+        <link rel="stylesheet" href="css/semesterprojecthomepage.css">
 		<!--  
 			Author:			Dylan Pogue
 			Date:			04/02/2021
