--- a/parkers_lawncare.html
+++ b/parkers_lawncare.html
@@ -2,35 +2,41 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Parker's Lawncare Home Page</title>
-		<meta name="author" content="Dylan Pogue">
+		<title>Parker's Lawncare What Services We Provide</title>
+		<meta name="author" content="Jaylen Gresham">
 		<meta name="description" content="CSCI 1210 ">
 		<meta name="keywords" content="CSCI 1210">
         <link rel="stylesheet" href="css/semesterprojecthomepage.css">
 		<!--  
-			Author:			Dylan Pogue
-			Date:			04/02/2021
+			Author:			Jaylen Gresham
+			Date:			04/17/2021
 			Assignment:		Semester Project
-			Purpose:		Parker's Lawncare Home Page
+			Purpose:		Jaylen's Lawncare What Services We Provide
 		-->
     </head>
     <body>
         <br>
         <header>        
-            <p>
-                <img src='images/001.png' alt='logo' class='logo'>
-            </p>
+                <h1>What Servies Are Provided</h1>
         </header>
         <br>
-        <div><br>
+        <div>
+            <img src='images/03.png' alt='Lawn Mower' class="floatRight">
             <p>
-                <img src='images/parker002.JPG' alt='parker'>
+                Using the Lawn Mower to cut grass from all sides no matter how small your lawn is. Contact us to get anytype of grass cut at your idea height and with your ideal pattern. Using the Lawn Mower we will provide some of the best looking grass you can ask for.
             </p>
-            <br>
+        </div>
+        <div>
+            <img src='images/02.png' alt='Leaf Blower' class="floatRight">
             <p>
-                Welcome to Parker's Lawncare Website!  The owner of the business is an ambitious young man with plans to own the best lawncare business in Johnson City, Tennessee and the surrounding areas.  Assuming that you have found this website because you are looking for someone to take care of your lawncare needs, I ask that you explore the different tabs of our website to learn more about us and our services.  Hope to see you soon!
+               Using the leaf blower to not only clean your lawns of debirs made by the lawn mower. Can Also provide the serive to get ride of all that pesky leafs from your trees that covers your lawn. Get them in a pile you designate to get ride of them as quickly as possble to make your lawn looking beautiful as you want.
             </p>
-            <br>
+        </div>
+        <div>
+            <img src='images/01.png' alt='Weed eater' class="floatRight">
+            <p>
+                Most lawns can benefit from a Weed Eater because it lets you take care of areas you can't easily reach with a mower. If you have a section of lawn that runs along a fence line, grass that grows against the house, or trees in your lawn. A Weed Eater will do the best job to keep the landscape in shape.
+            </p>
         </div>
         <nav>
             <a href='parkers_lawncare_about_us.html'>To Learn More About Us Click HERE!</a>
